--- a/manager/package.json
+++ b/manager/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "firebase": "^4.7.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-router-flux": "^3.35.0",
+    "react-native-communications": "^2.2.1",
+    "react-native-router-flux": "^3.38.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
